<resources>
    <string name="app_name">Soccer Timer</string>
    <string name="title">Soccer Timer</string>
    <string name="btn_config">Configuration</string>
    <string name="btn_history">History</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="initial_home_score">0</string>
    <string name="initial_away_score">0</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_back">Back</string>
    <string name="btn_new">New Game</string>
    <string name="btn_second">Second Half</string>
    <string name="btn_clear">Clear SharedPreferences</string>
    <string name="btn_create">Create</string>
    <string name="btn_config_time">Pick Game Tempo</string>
    <string name="lb_half">%1$dst Half</string>
    <string name="lb_p_home">Player Home</string>
    <string name="lb_p_away">Player Away</string>
    <string name="lb_p_hint">Team Name</string>
    <string name="minutes">Minute</string>
    <string name="desc_menu_image">Soccer Player Image</string>
    <string name="desc_chronometer_image">Soccer Player Image</string>
    <string name="desc_config">Configuration</string>
    <string name="desc_history">History</string>
    <string name="desc_start">Start</string>
    <string name="desc_back">Back</string>
    <string name="desc_undo">Undo</string>
    <string name="desc_inc_home_score">Increase home score</string>
    <string name="desc_inc_away_score">Increase away score</string>
    <string name="desc_dec_home_score">Decrease home score</string>
    <string name="desc_dec_away_score">Decrease away score</string>
    <string name="desc_reset_score">Reset the score</string>
    <string name="time">00:10</string>
    <string name="countDown">00</string>
    <string name="cardView_label_point">0</string>
    <string name="cardView_label_versus">X</string>
    <string name="cardView_label_home">Home</string>
    <string name="cardView_label_away">Away</string>
</resources>