<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/pointHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cardView_label_point"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/homeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bebas_neue"
            android:gravity="start"
            android:text="@string/cardView_label_home"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/xTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bebas_neue"
            android:gravity="center"
            android:text="@string/cardView_label_versus"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/awayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bebas_neue"
            android:gravity="end"
            android:text="@string/cardView_label_away"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pointAway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cardView_label_point"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>